<resources>


    <string name="app_name">Silver Strength</string>

    <string name="weight_label">Weight:</string>
    <string-array name="weight_units">
        <item>Kilograms (kg)</item>
        <item>Pounds (lbs)</item>
    </string-array>
    <string name="select_weight_unit_prompt">Select Weight Unit</string>

    <string name="height_label">Height:</string>
    <string-array name="height_units">
        <item>Meters (m)</item>
        <item>Foot (ft)</item>
    </string-array>
    <string name="select_height_unit_prompt">Select Height Unit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hour_x">Hour x</string>
    <string name="cycle">Cycle</string>
    <string name="hike">Hike</string>
    <string name="jog">Jog</string>
    <string name="thirty_min_cardio">30 minute cardio</string>
    <string name="upper_body"> 20 minute upper body workout</string>
    <string name="walk">Walk</string>
    <string name="swim">Swim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yoga">Yoga</string>
    <string name="yoga_for_joint_pain">15 minute yoga to ease joint pain</string>
    <string name="yoga_20_minutes">Vinyasa flow 20 minute yoga</string>
    <string name="ten_min_lunge">10 minute lunge variations</string>
    <string name="rain_desc">Looks like it is raining, how about you try one of the following exercises?</string>
    <string name="cloudyDescr">Looks like it is cloudy, how about you try one of the following exercises?</string>
    <string name="sunnyDesc">Looks like it is going to be sunny, how about you try one of these activities?</string>
    <string name="back">Back</string>
    <string name="metres">metres</string>
    <string name="calories">calories</string>
    <string name="stepper_activity">StepperActivity</string>
    <string name="calender_screen">CalenderScreen</string>
    <string name="currentSteps">0/10,000</string>
    <string name="caloriesNum">0 calories</string>
    <string name="distanceNum">0 metres</string>
    <string name="personalBest">Personal Best Step Score:</string>
    <string name="stepsLeft">You have # steps left.</string>
    <string name="confirm">Confirm</string>
    <string-array name="default_exercises">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="choose_activity">Choose activity:</string>
    <string name="hour_choose">Schedule Time (Hour):</string>
    <string name="minute_choose">Schedule Time (Minute):</string>
    <string name="ideal_steps">/10,000</string>
    <string name="settings">Settings</string>
    <string name="weather_button">Weather</string>
    <string name="calendar_button">Calendar</string>
    <string name="step_counter_button">Step Counter</string>
    <string name="app_logo">App_Logo</string>
    <string name="username">Username</string>
    <string name="weight">weight</string>
    <string name="password">password</string>
    <string name="username_settings">username</string>
    <string name="email_settings">email</string>
    <string name="height_settings">height</string>
    <string name="_settings">Save</string>
    <string name="logout">Logout</string>
    <string name="email_create">Enter your email here</string>
    <string name="create_your_username">Create Your Username :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="enter_your_email_below">Enter Your Email Below :</string>
    <string name="verify_email_button">Verify Email</string>
    <string name="enter_a_password">Enter A Password :</string>
    <string name="save_button">Save</string>
    <string name="enter_your_height_below">Enter Your Height Below:</string>
    <string name="enter_your_birthdate_below">Enter Your Birthdate Below:</string>
    <string name="enter_your_weight_below">Enter Your Weight Below:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_your_gender_below">Select Your Gender Below:</string>
    <string name="type_here">type here</string>
    <string name="username_change">Username:</string>
</resources>