<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/back_default"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Username EditText -->
    <EditText
        android:id="@+id/username_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:inputType="textPersonName"
        android:hint="@string/username_settings"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <!-- Change Password EditText -->
    <EditText
        android:id="@+id/password_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text"
        android:importantForAutofill="no" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/email_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_settings"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        android:importantForAutofill="no" />


    <!-- Weight EditText -->
    <EditText
        android:id="@+id/weight_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/weight"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        android:importantForAutofill="no" />


    <!-- Height EditText -->
    <EditText
        android:id="@+id/height_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/height_settings"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_text"
        android:importantForAutofill="no" />


    <!-- Save Button -->

    <!-- Logout Button -->

    <Button
        android:id="@+id/save_button"
        android:layout_width="193dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:text="@string/_settings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_text" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="190dp"
        android:layout_height="61dp"
        android:layout_marginTop="130dp"
        android:text="@string/logout"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>