<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_default"
    tools:context=".StepperActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />


    <ImageView
        android:id="@+id/stepLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/stepper_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step_logo" />

    <TextView
        android:id="@+id/currentsteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:backgroundTint="#EBEFF3"
        android:text="@string/currentSteps"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepLogo" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="#AEAEAE"
        android:text="@string/caloriesNum"
        android:textColor="#455A64"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="#AEAEAE"
        android:text="@string/distanceNum"
        android:textColor="#455A64"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider" />

    <ImageView
        android:id="@+id/flame_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="100dp"
        android:background="@color/black"
        android:contentDescription="@string/stepper_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/calories"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/calories"
        app:srcCompat="@drawable/fire_logo" />

    <ImageView
        android:id="@+id/distance_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:contentDescription="@string/stepper_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/distance"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/distance"
        app:srcCompat="@drawable/distance_logo" />

    <TextView
        android:id="@+id/personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:backgroundTint="#EBEFF3"
        android:text="@string/personalBest"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentsteps" />

    <TextView
        android:id="@+id/stepsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:backgroundTint="#EBEFF3"
        android:text="@string/stepsLeft"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>