<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enter"
    android:background="@color/back_default"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/create_username_text"
                android:layout_width="212dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:text="@string/create_your_username"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="239dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_username_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input"
                    android:layout_width="246dp"
                    android:layout_height="63dp"
                    android:hint="Enter Username Here"
                    android:textAlignment="center"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/enter_email_text"
                android:layout_width="247dp"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:text="@string/enter_your_email_below"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_email_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_create"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/verify_email_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/verify_email_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_input"
                    app:layout_constraintVertical_bias="1.0" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/enter_password_text"
                android:layout_width="203dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:text="@string/enter_a_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_layout" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="244dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/type_here"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_password_text" />


            <TextView
                android:id="@+id/confirm_password_text"
                android:layout_width="203dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:text="@string/confirm_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_input" />

            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_width="244dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/type_here"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_text" />

            <Button
                android:id="@+id/saveButton_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_input"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>